--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Site
 on:
   push:
     branches:
-      - master
+      - master  # Trigger on the master branch of your main repository
 
 jobs:
   build:
@@ -16,9 +16,9 @@ jobs:
         submodules: true  # Fetch submodules
 
     - name: Setup Ruby
-      uses: actions/setup-ruby@v1
+      uses: actions/setup-ruby@v2  # Update to v2 to support Node.js 20
       with:
-        ruby-version: 3.1
+        ruby-version: 3.1.3
 
     - name: Install dependencies
       run: |
@@ -33,7 +33,7 @@ jobs:
         mv _site/* ../_site/blog  # Move the built site to the main _site directory
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4  # Update to v4 to support Node.js 20
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_site
