--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -16,7 +16,7 @@ jobs:
         submodules: true  # Fetch submodules
 
     - name: Setup Ruby
-      uses: actions/setup-ruby@v2  # Update to v2 to support Node.js 20
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: 3.1.3
 
@@ -33,7 +33,7 @@ jobs:
         mv _site/* ../_site/blog  # Move the built site to the main _site directory
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4  # Update to v4 to support Node.js 20
+      uses: peaceiris/actions-gh-pages@v4  # Use the updated version that supports Node.js 20
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_site
