--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -25,15 +25,21 @@ jobs:
         cd blog
         bundle install
 
-    - name: Build Jekyll site
+    - name: Build Blog Site
       run: |
         cd blog
         bundle exec jekyll build
         mkdir -p ../_site/blog  # Ensure the destination directory exists
-        mv _site/* ../_site/blog/  # Move the built site to the main _site/blog directory
+        mv _site/* ../_site/blog/  # Move the built blog site to the main _site/blog directory
+
+    - name: Copy Static Site Files
+      run: |
+        cp index.html _site/
+        cp style.css _site/
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_site
+        publish_branch: gh-pages  # Ensure this is set to gh-pages
