--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -36,6 +36,8 @@ jobs:
       run: |
         cp index.html _site/
         cp style.css _site/
+        cp assets _site/
+
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
