--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         cp index.html _site/
         cp style.css _site/
-        cp assets _site/
+        cp -r assets _site/
 
 
     - name: Deploy to GitHub Pages
