--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -37,6 +37,7 @@ jobs:
         cp index.html _site/
         cp style.css _site/
         cp -r assets _site/
+        cp CNAME _site/
 
 
     - name: Deploy to GitHub Pages
