--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,9 +1,26 @@
 name: Build and Deploy Site
-
 on:
   push:
     branches:
-      - master  # Trigger on the master branch of your main repository
+      - main
+      - master
+    paths-ignore:
+      - .gitignore
+      - README.md
+      - LICENSE
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -15,10 +32,15 @@ jobs:
       with:
         submodules: true  # Fetch submodules
 
+    - name: Setup Pages
+      id: pages
+      uses: actions/configure-pages@v4
+
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.1
+        ruby-version: 3.3
+        bundler-cache: true
 
     - name: Install dependencies
       run: |
@@ -28,9 +50,9 @@ jobs:
     - name: Build Blog Site
       run: |
         cd blog
-        bundle exec jekyll build
-        mkdir -p ../_site/blog  # Ensure the destination directory exists
-        mv _site/* ../_site/blog/  # Move the built blog site to the main _site/blog directory
+        bundle exec jekyll build -d "../_site/blog"
+      env:
+        JEKYLL_ENV: "production"
 
     - name: Copy Static Site Files
       run: |
@@ -38,11 +60,22 @@ jobs:
         cp style.css _site/
         cp -r assets _site/
         cp CNAME _site/
+      # Copies the necessary static files from the main repo into the _site directory so they are included in deployment.
+      # CNAME file is needed if using custom domain
+      # My website uses style.css and files in the `assets` directory
 
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v4
+    - name: Upload site artifact
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
-        publish_branch: gh-pages  # Ensure this is set to gh-pages
+        path: "_site${{ steps.pages.outputs.base_path }}"
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
