--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -13,7 +13,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-permissions: # set permissions here so we don't have to do it manually
+permissions: # Set permissions here so we don't have to do it manually
   contents: read
   pages: write
   id-token: write
@@ -79,7 +79,7 @@ jobs:
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "_site${{ steps.pages.outputs.base_path }}"
+          path: "_site"
         # Uploads built site to GitHub Actions, allows next step to access and publish the files
 
   deploy:
