--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -29,9 +29,11 @@ jobs:
       run: |
         cd blog
         bundle exec jekyll build
-        mkdir -p ../_site/blog  # Ensure the destination directory exists
-        mv _site/* ../_site/blog/  # Move the built blog site to the main _site/blog directory
-
+        mkdir -p ../_site/blog   
+        mv _site/* ../_site/blog/  
+      # Move the built blog site to the main _site/blog directory
+      # Ensure the destination directory exists
+      
     - name: Copy Static Site Files
       run: |
         cp index.html _site/
